--- a/test/src/main/java/uks/debuggen/shop/Shop/classModel.yaml
+++ b/test/src/main/java/uks/debuggen/shop/Shop/classModel.yaml
@@ -21,7 +21,7 @@
   attributes: 	shopService_history 	shopService_port 	shopService_spark 	shopService_model 	shopService_handlerMap
   importList: 	"import java.util.LinkedHashMap;" 	"import java.util.Map;" 	"import java.util.function.Consumer;" 	"import uks.debuggen.shop.events.*;" 	"import org.fulib.yaml.Yaml;" 	"import spark.Service;" 	"import spark.Request;" 	"import spark.Response;" 	"import com.mashape.unirest.http.HttpResponse;" 	"import com.mashape.unirest.http.Unirest;" 	"import com.mashape.unirest.http.exceptions.UnirestException;" 	"import java.util.concurrent.ExecutorService;" 	"import java.util.concurrent.Executors;" 	"import java.util.logging.Logger;" 	"import java.util.logging.Level;"
   imports: 	"import java.util.LinkedHashMap;" 	"import java.util.Map;" 	"import java.util.function.Consumer;" 	"import uks.debuggen.shop.events.*;" 	"import org.fulib.yaml.Yaml;" 	"import spark.Service;" 	"import spark.Request;" 	"import spark.Response;" 	"import com.mashape.unirest.http.HttpResponse;" 	"import com.mashape.unirest.http.Unirest;" 	"import com.mashape.unirest.http.exceptions.UnirestException;" 	"import java.util.concurrent.ExecutorService;" 	"import java.util.concurrent.Executors;" 	"import java.util.logging.Logger;" 	"import java.util.logging.Level;"
-  methods: 	shopService_start 	shopService_getHello 	shopService_subscribeAndLoadOldEvents 	shopService_apply 	shopService_getPage 	shopService_handleOrderRegistered 	shopService_handleOrderApproved 	shopService_handleOrderPicked 	shopService_handleOrderDeclined 	shopService_initEventHandlerMap 	shopService_ignoreEvent 	shopService_publish 	shopService_postApply
+  methods: 	shopService_start 	shopService_getHello 	shopService_subscribeAndLoadOldEvents 	shopService_apply 	shopService_getPage 	shopService_getDemoPage 	shopService_handleOrderRegistered 	shopService_handleDemoOrderRegistered 	shopService_handleOrderApproved 	shopService_handleDemoOrderApproved 	shopService_handleOrderPicked 	shopService_handleDemoOrderPicked 	shopService_handleOrderDeclined 	shopService_handleDemoOrderDeclined 	shopService_handleOrderBuilt 	shopService_handleCustomerBuilt 	shopService_initEventHandlerMap 	shopService_ignoreEvent 	shopService_publish 	shopService_postApply 	shopService_stripBrackets
   model: 	c
   modified: 	false
   name: 	ShopService
@@ -63,7 +63,8 @@
   clazz: 	shopModel
   declaration: 	"public Order getOrCreateOrder(String id)"
   id: 	ShopModel_getOrCreateOrder
-  methodBody: 	"return (Order) modelMap.computeIfAbsent(id, k -> new Order().setId(k));
+  methodBody: 	"if (id == null) return null;
+return (Order) modelMap.computeIfAbsent(id, k -> new Order().setId(k));
 "
   modified: 	false
   modifiers: 	public
@@ -77,7 +78,8 @@
   clazz: 	shopModel
   declaration: 	"public Customer getOrCreateCustomer(String id)"
   id: 	ShopModel_getOrCreateCustomer
-  methodBody: 	"return (Customer) modelMap.computeIfAbsent(id, k -> new Customer().setId(k));
+  methodBody: 	"if (id == null) return null;
+return (Customer) modelMap.computeIfAbsent(id, k -> new Customer().setId(k));
 "
   modified: 	false
   modifiers: 	public
@@ -235,6 +237,22 @@ publish(event);"
   clazz: 	shopService
   declaration: 	"public String getPage(Request request, Response response)"
   id: 	ShopService_getPage
+  methodBody: 	"// no fulib
+// add your page handling here
+return getDemoPage(request, response);
+"
+  modified: 	false
+  modifiers: 	public
+  name: 	getPage
+  paramsString: 	"Request request, Response response"
+  returnType: 	String
+  signature: 	"class/ShopService/method/getPage(Request,Response)"
+
+- shopService_getDemoPage: 	org.fulib.classmodel.FMethod
+  annotations: 	""
+  clazz: 	shopService
+  declaration: 	"public String getDemoPage(Request request, Response response)"
+  id: 	ShopService_getDemoPage
   methodBody: 	"StringBuilder html = new StringBuilder();
 String id = request.params(\"id\");
 String event = request.queryParams(\"event\");
@@ -244,7 +262,7 @@ if (\"Shop shoes selected 12:51\".equals(event)) {
    // create ShopShoesSelected: Shop shoes selected 12:51
    ShopShoesSelected e1251 = new ShopShoesSelected();
    e1251.setId(\"12:51\");
-   publish(e1251);
+   apply(e1251);
 }
 
 if (\"order registered 13:01\".equals(event)) {
@@ -255,7 +273,7 @@ if (\"order registered 13:01\".equals(event)) {
    e1301.setProduct(request.queryParams(\"product\"));
    e1301.setName(request.queryParams(\"name\"));
    e1301.setAddress(request.queryParams(\"address\"));
-   publish(e1301);
+   apply(e1301);
 }
 
 
@@ -293,39 +311,19 @@ html.append(\"This is the Shop Service page \" + id + \"\n\");
 return html.toString();"
   modified: 	false
   modifiers: 	public
-  name: 	getPage
+  name: 	getDemoPage
   paramsString: 	"Request request, Response response"
   returnType: 	String
-  signature: 	"class/ShopService/method/getPage(Request,Response)"
+  signature: 	"class/ShopService/method/getDemoPage(Request,Response)"
 
 - shopService_handleOrderRegistered: 	org.fulib.classmodel.FMethod
   annotations: 	""
   clazz: 	shopService
   declaration: 	"private void handleOrderRegistered(Event e)"
   id: 	ShopService_handleOrderRegistered
-  methodBody: 	"OrderRegistered event = (OrderRegistered) e;
-if (event.getId().equals(\"13:01\")) {
-
-   Order order1300 = model.getOrCreateOrder(\"order1300\");
-   order1300.setProduct(\"shoes\");
-   order1300.setCustomer(\"Alice\");
-   order1300.setAddress(\"Wonderland 1\");
-   order1300.setState(\"pending\");
-
-   Customer alice = model.getOrCreateCustomer(\"Alice\");
-   alice.setOrders(\"[ order1300 ]\");
-}
-if (event.getId().equals(\"13:11\")) {
-
-   Order order1310 = model.getOrCreateOrder(\"order1310\");
-   order1310.setProduct(\"tshirt\");
-   order1310.setCustomer(\"Alice\");
-   order1310.setAddress(\"Wonderland 1\");
-   order1310.setState(\"pending\");
-
-   Customer alice = model.getOrCreateCustomer(\"Alice\");
-   alice.setOrders(\"[ order1300 order1310 ]\");
-}
+  methodBody: 	"// no fulib
+OrderRegistered event = (OrderRegistered) e;
+handleDemoOrderRegistered(event);
 "
   modified: 	false
   modifiers: 	private
@@ -334,17 +332,61 @@ if (event.getId().equals(\"13:11\")) {
   returnType: 	void
   signature: 	"class/ShopService/method/handleOrderRegistered(Event)"
 
+- shopService_handleDemoOrderRegistered: 	org.fulib.classmodel.FMethod
+  annotations: 	""
+  clazz: 	shopService
+  declaration: 	"private void handleDemoOrderRegistered(OrderRegistered event)"
+  id: 	ShopService_handleDemoOrderRegistered
+  methodBody: 	"if (event.getId().equals(\"13:01\")) {
+   OrderBuilt order1300Event = new OrderBuilt();
+   order1300Event.setId(\"13:02\");
+   order1300Event.setBlockId(\"order1300\");
+   order1300Event.setProduct(\"shoes\");
+   order1300Event.setCustomer(\"Alice\");
+   order1300Event.setAddress(\"Wonderland 1\");
+   order1300Event.setState(\"pending\");
+   apply(order1300Event);
+
+   CustomerBuilt aliceEvent = new CustomerBuilt();
+   aliceEvent.setId(\"13:03\");
+   aliceEvent.setBlockId(\"Alice\");
+   aliceEvent.setOrders(\"[ order1300 ]\");
+   apply(aliceEvent);
+
+}
+if (event.getId().equals(\"13:11\")) {
+   OrderBuilt order1310Event = new OrderBuilt();
+   order1310Event.setId(\"13:12\");
+   order1310Event.setBlockId(\"order1310\");
+   order1310Event.setProduct(\"tshirt\");
+   order1310Event.setCustomer(\"Alice\");
+   order1310Event.setAddress(\"Wonderland 1\");
+   order1310Event.setState(\"pending\");
+   apply(order1310Event);
+
+   CustomerBuilt aliceEvent = new CustomerBuilt();
+   aliceEvent.setId(\"13:13\");
+   aliceEvent.setBlockId(\"Alice\");
+   aliceEvent.setOrders(\"[ order1300 order1310 ]\");
+   apply(aliceEvent);
+
+}
+"
+  modified: 	false
+  modifiers: 	private
+  name: 	handleDemoOrderRegistered
+  paramsString: 	"OrderRegistered event"
+  returnType: 	void
+  signature: 	"class/ShopService/method/handleDemoOrderRegistered(OrderRegistered)"
+
 - shopService_handleOrderApproved: 	org.fulib.classmodel.FMethod
   annotations: 	""
   clazz: 	shopService
   declaration: 	"private void handleOrderApproved(Event e)"
   id: 	ShopService_handleOrderApproved
-  methodBody: 	"OrderApproved event = (OrderApproved) e;
-if (event.getId().equals(\"13:05\")) {
-
-   Order order1300 = model.getOrCreateOrder(\"order1300\");
-   order1300.setState(\"picking\");
-}
+  methodBody: 	"// no fulib
+OrderApproved event = (OrderApproved) e;
+handleDemoOrderApproved(event);
 "
   modified: 	false
   modifiers: 	private
@@ -353,17 +395,35 @@ if (event.getId().equals(\"13:05\")) {
   returnType: 	void
   signature: 	"class/ShopService/method/handleOrderApproved(Event)"
 
+- shopService_handleDemoOrderApproved: 	org.fulib.classmodel.FMethod
+  annotations: 	""
+  clazz: 	shopService
+  declaration: 	"private void handleDemoOrderApproved(OrderApproved event)"
+  id: 	ShopService_handleDemoOrderApproved
+  methodBody: 	"if (event.getId().equals(\"13:05\")) {
+   OrderBuilt order1300Event = new OrderBuilt();
+   order1300Event.setId(\"13:06\");
+   order1300Event.setBlockId(\"order1300\");
+   order1300Event.setState(\"picking\");
+   apply(order1300Event);
+
+}
+"
+  modified: 	false
+  modifiers: 	private
+  name: 	handleDemoOrderApproved
+  paramsString: 	"OrderApproved event"
+  returnType: 	void
+  signature: 	"class/ShopService/method/handleDemoOrderApproved(OrderApproved)"
+
 - shopService_handleOrderPicked: 	org.fulib.classmodel.FMethod
   annotations: 	""
   clazz: 	shopService
   declaration: 	"private void handleOrderPicked(Event e)"
   id: 	ShopService_handleOrderPicked
-  methodBody: 	"OrderPicked event = (OrderPicked) e;
-if (event.getId().equals(\"14:00\")) {
-
-   Order order1300 = model.getOrCreateOrder(\"order1300\");
-   order1300.setState(\"shipping\");
-}
+  methodBody: 	"// no fulib
+OrderPicked event = (OrderPicked) e;
+handleDemoOrderPicked(event);
 "
   modified: 	false
   modifiers: 	private
@@ -372,17 +432,35 @@ if (event.getId().equals(\"14:00\")) {
   returnType: 	void
   signature: 	"class/ShopService/method/handleOrderPicked(Event)"
 
+- shopService_handleDemoOrderPicked: 	org.fulib.classmodel.FMethod
+  annotations: 	""
+  clazz: 	shopService
+  declaration: 	"private void handleDemoOrderPicked(OrderPicked event)"
+  id: 	ShopService_handleDemoOrderPicked
+  methodBody: 	"if (event.getId().equals(\"14:00\")) {
+   OrderBuilt order1300Event = new OrderBuilt();
+   order1300Event.setId(\"14:03\");
+   order1300Event.setBlockId(\"order1300\");
+   order1300Event.setState(\"shipping\");
+   apply(order1300Event);
+
+}
+"
+  modified: 	false
+  modifiers: 	private
+  name: 	handleDemoOrderPicked
+  paramsString: 	"OrderPicked event"
+  returnType: 	void
+  signature: 	"class/ShopService/method/handleDemoOrderPicked(OrderPicked)"
+
 - shopService_handleOrderDeclined: 	org.fulib.classmodel.FMethod
   annotations: 	""
   clazz: 	shopService
   declaration: 	"private void handleOrderDeclined(Event e)"
   id: 	ShopService_handleOrderDeclined
-  methodBody: 	"OrderDeclined event = (OrderDeclined) e;
-if (event.getId().equals(\"13:14\")) {
-
-   Order order1310 = model.getOrCreateOrder(\"order1310\");
-   order1310.setState(\"out of stock\");
-}
+  methodBody: 	"// no fulib
+OrderDeclined event = (OrderDeclined) e;
+handleDemoOrderDeclined(event);
 "
   modified: 	false
   modifiers: 	private
@@ -390,6 +468,62 @@ if (event.getId().equals(\"13:14\")) {
   paramsString: 	"Event e"
   returnType: 	void
   signature: 	"class/ShopService/method/handleOrderDeclined(Event)"
+
+- shopService_handleDemoOrderDeclined: 	org.fulib.classmodel.FMethod
+  annotations: 	""
+  clazz: 	shopService
+  declaration: 	"private void handleDemoOrderDeclined(OrderDeclined event)"
+  id: 	ShopService_handleDemoOrderDeclined
+  methodBody: 	"if (event.getId().equals(\"13:14\")) {
+   OrderBuilt order1310Event = new OrderBuilt();
+   order1310Event.setId(\"13:12\");
+   order1310Event.setBlockId(\"order1310\");
+   order1310Event.setState(\"out of stock\");
+   apply(order1310Event);
+
+}
+"
+  modified: 	false
+  modifiers: 	private
+  name: 	handleDemoOrderDeclined
+  paramsString: 	"OrderDeclined event"
+  returnType: 	void
+  signature: 	"class/ShopService/method/handleDemoOrderDeclined(OrderDeclined)"
+
+- shopService_handleOrderBuilt: 	org.fulib.classmodel.FMethod
+  annotations: 	""
+  clazz: 	shopService
+  declaration: 	"private void handleOrderBuilt(Event e)"
+  id: 	ShopService_handleOrderBuilt
+  methodBody: 	"OrderBuilt event = (OrderBuilt) e;
+Order object = model.getOrCreateOrder(event.getBlockId());
+object.setProduct(event.getProduct());
+object.setCustomer(event.getCustomer());
+object.setAddress(event.getAddress());
+object.setState(event.getState());
+"
+  modified: 	false
+  modifiers: 	private
+  name: 	handleOrderBuilt
+  paramsString: 	"Event e"
+  returnType: 	void
+  signature: 	"class/ShopService/method/handleOrderBuilt(Event)"
+
+- shopService_handleCustomerBuilt: 	org.fulib.classmodel.FMethod
+  annotations: 	""
+  clazz: 	shopService
+  declaration: 	"private void handleCustomerBuilt(Event e)"
+  id: 	ShopService_handleCustomerBuilt
+  methodBody: 	"CustomerBuilt event = (CustomerBuilt) e;
+Customer object = model.getOrCreateCustomer(event.getBlockId());
+object.setOrders(event.getOrders());
+"
+  modified: 	false
+  modifiers: 	private
+  name: 	handleCustomerBuilt
+  paramsString: 	"Event e"
+  returnType: 	void
+  signature: 	"class/ShopService/method/handleCustomerBuilt(Event)"
 
 - shopService_initEventHandlerMap: 	org.fulib.classmodel.FMethod
   annotations: 	""
@@ -402,6 +536,8 @@ if (event.getId().equals(\"13:14\")) {
    handlerMap.put(OrderApproved.class, this::handleOrderApproved);
    handlerMap.put(OrderPicked.class, this::handleOrderPicked);
    handlerMap.put(OrderDeclined.class, this::handleOrderDeclined);
+   handlerMap.put(OrderBuilt.class, this::handleOrderBuilt);
+   handlerMap.put(CustomerBuilt.class, this::handleCustomerBuilt);
 }
 "
   modified: 	false
@@ -471,6 +607,27 @@ catch (UnirestException e) {
   paramsString: 	"Request req, Response res"
   returnType: 	String
   signature: 	"class/ShopService/method/postApply(Request,Response)"
+
+- shopService_stripBrackets: 	org.fulib.classmodel.FMethod
+  annotations: 	""
+  clazz: 	shopService
+  declaration: 	"public String stripBrackets(String back)"
+  id: 	ShopService_stripBrackets
+  methodBody: 	"      if (back == null) {
+         return \"\";
+      }
+      int open = back.indexOf('[');
+      int close = back.indexOf(']');
+      if (open >= 0 && close >= 0) {
+         back = back.substring(open + 1, close);
+      }
+      return back;"
+  modified: 	false
+  modifiers: 	public
+  name: 	stripBrackets
+  paramsString: 	"String back"
+  returnType: 	String
+  signature: 	"class/ShopService/method/stripBrackets(String)"
 
 - order_id: 	org.fulib.classmodel.Attribute
   clazz: 	order
