--- a/test/src/main/java/uks/fulibgen/shop/someservice/classModel.yaml
+++ b/test/src/main/java/uks/fulibgen/shop/someservice/classModel.yaml
@@ -21,7 +21,7 @@
   attributes: 	someserviceService_history 	someserviceService_port 	someserviceService_spark 	someserviceService_model 	someserviceService_handlerMap
   importList: 	"import java.util.LinkedHashMap;" 	"import java.util.Map;" 	"import java.util.function.Consumer;" 	"import uks.fulibgen.shop.events.*;" 	"import org.fulib.yaml.Yaml;" 	"import spark.Service;" 	"import spark.Request;" 	"import spark.Response;" 	"import com.mashape.unirest.http.HttpResponse;" 	"import com.mashape.unirest.http.Unirest;" 	"import com.mashape.unirest.http.exceptions.UnirestException;" 	"import java.util.concurrent.ExecutorService;" 	"import java.util.concurrent.Executors;" 	"import java.util.logging.Logger;" 	"import java.util.logging.Level;"
   imports: 	"import java.util.LinkedHashMap;" 	"import java.util.Map;" 	"import java.util.function.Consumer;" 	"import uks.fulibgen.shop.events.*;" 	"import org.fulib.yaml.Yaml;" 	"import spark.Service;" 	"import spark.Request;" 	"import spark.Response;" 	"import com.mashape.unirest.http.HttpResponse;" 	"import com.mashape.unirest.http.Unirest;" 	"import com.mashape.unirest.http.exceptions.UnirestException;" 	"import java.util.concurrent.ExecutorService;" 	"import java.util.concurrent.Executors;" 	"import java.util.logging.Logger;" 	"import java.util.logging.Level;"
-  methods: 	someserviceService_start 	someserviceService_getHello 	someserviceService_subscribeAndLoadOldEvents 	someserviceService_apply 	someserviceService_getPage 	someserviceService_getDemoPage 	someserviceService_handleProductStored 	someserviceService_handleDemoProductStored 	someserviceService_handleBoxEdited 	someserviceService_initEventHandlerMap 	someserviceService_ignoreEvent 	someserviceService_publish 	someserviceService_postApply 	someserviceService_stripBrackets
+  methods: 	someserviceService_start 	someserviceService_getHello 	someserviceService_subscribeAndLoadOldEvents 	someserviceService_apply 	someserviceService_getPage 	someserviceService_getDemoPage 	someserviceService_handleProductStored 	someserviceService_handleDemoProductStored 	someserviceService_handleBoxBuilt 	someserviceService_initEventHandlerMap 	someserviceService_ignoreEvent 	someserviceService_publish 	someserviceService_postApply 	someserviceService_stripBrackets
   model: 	c
   modified: 	false
   name: 	someserviceService
@@ -268,9 +268,9 @@ handleDemoProductStored(event);
   declaration: 	"private void handleDemoProductStored(ProductStored event)"
   id: 	someserviceService_handleDemoProductStored
   methodBody: 	"if (event.getId().equals(\"12:00\")) {
-   BoxEdited box23Event = new BoxEdited();
+   BoxBuilt box23Event = new BoxBuilt();
    box23Event.setId(\"12:01\");
-   box23Event.setIncrement(\"box23\");
+   box23Event.setBlockId(\"box23\");
    box23Event.setProduct(\"shoes\");
    box23Event.setPlace(\"shelf23\");
    apply(box23Event);
@@ -284,22 +284,22 @@ handleDemoProductStored(event);
   returnType: 	void
   signature: 	"class/someserviceService/method/handleDemoProductStored(ProductStored)"
 
-- someserviceService_handleBoxEdited: 	org.fulib.classmodel.FMethod
+- someserviceService_handleBoxBuilt: 	org.fulib.classmodel.FMethod
   annotations: 	""
   clazz: 	someserviceService
-  declaration: 	"private void handleBoxEdited(Event e)"
-  id: 	someserviceService_handleBoxEdited
-  methodBody: 	"BoxEdited event = (BoxEdited) e;
-Box object = model.getOrCreateBox(event.getIncrement());
+  declaration: 	"private void handleBoxBuilt(Event e)"
+  id: 	someserviceService_handleBoxBuilt
+  methodBody: 	"BoxBuilt event = (BoxBuilt) e;
+Box object = model.getOrCreateBox(event.getBlockId());
 object.setProduct(event.getProduct());
 object.setPlace(event.getPlace());
 "
   modified: 	false
   modifiers: 	private
-  name: 	handleBoxEdited
+  name: 	handleBoxBuilt
   paramsString: 	"Event e"
   returnType: 	void
-  signature: 	"class/someserviceService/method/handleBoxEdited(Event)"
+  signature: 	"class/someserviceService/method/handleBoxBuilt(Event)"
 
 - someserviceService_initEventHandlerMap: 	org.fulib.classmodel.FMethod
   annotations: 	""
@@ -309,7 +309,7 @@ object.setPlace(event.getPlace());
   methodBody: 	"if (handlerMap == null) {
    handlerMap = new LinkedHashMap<>();
    handlerMap.put(ProductStored.class, this::handleProductStored);
-   handlerMap.put(BoxEdited.class, this::handleBoxEdited);
+   handlerMap.put(BoxBuilt.class, this::handleBoxBuilt);
 }
 "
   modified: 	false
